--- a/taskmanagement/package.json
+++ b/taskmanagement/package.json
@@ -7,8 +7,11 @@
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
     "axios": "^1.7.8",
+    "framer-motion": "^11.12.0",
     "react": "^18.3.1",
+    "react-apple-login": "^1.1.6",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^7.0.1",
     "react-scripts": "^5.0.1",
     "web-vitals": "^4.2.4"
