--- a/taskmanagement/package.json
+++ b/taskmanagement/package.json
@@ -6,10 +6,12 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
-    "axios": "^1.7.8",
+    "axios": "^1.7.9",
+    "chart.js": "^4.4.7",
     "framer-motion": "^11.12.0",
     "react": "^18.3.1",
     "react-apple-login": "^1.1.6",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^7.0.1",
